--- a/vagrant/provisioning/playbook.yml
+++ b/vagrant/provisioning/playbook.yml
@@ -22,10 +22,12 @@
         - postgresql-common
         - libpq-dev
         - python-psycopg2
+        - unzip
+        - recode
   - name: ensure database is created
     become: true
     become_user: postgres
-    postgresql_db: name=usda_sr28 login_user=postgres
+    postgresql_db: name=usda_sr28 login_user=postgres encoding=UTF-8 lc_collate=en_US.UTF-8 lc_ctype=en_US.UTF-8
 
   roles:
     - geerlingguy.ruby
